Added ParseKindleNote.  Minor changes to others.